msa/k8s_ingress_certificate/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-msa-ingress
  namespace: seulki
  annotations:
    kubernetes.io/ingress.class: nginx # ingress controller -> nginx로 만들어졌다.
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # 첫번째 prefix 제거 후 endpoint 전달
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.wisdom0405.shop" # 도메인명
    secretName: wisdom0405-com-tls # Certificate의 secertName 동일하게 지정
  rules:
    - host: server.wisdom0405.shop
      http:
        paths:
          - path: /member-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: member-service
                port: 
                  number: 80
          - path: /order-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port: 
                  number: 80
          - path: /product-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port: 
                  number: 80
